// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decrease Match to snapshot 1`] = `
<div>
  <svg
    fill="#000"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"
    />
  </svg>
</div>
`;

exports[`Increase Match to snapshot 1`] = `
<div>
  <svg
    fill="#000"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"
    />
  </svg>
</div>
`;
